<resources>
    <string name="app_name">PhiWMS</string>
    <string name="title_activity_service_en_construction">ServiceEnConstructionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_service_en_creation">ServiceEnCreationActivity</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="controle_hydrometrie">Contrôle d’hydrométrie</string>
    <string name="controle_refrigeration">Contrôle de réfrigération</string>
    <string name="controle_radiation">Contrôle de radiation</string>
    <string name="controle_temperature">Contrôle de température</string>
    <string name="controle_luminosite">Contrôle de luminosité</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_un_medicament_au_livret">UnMedicamentAuLivretActivity</string>
    <string name="title_activity_un_dispositif_au_livret">UnDispositifAuLivret</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>
    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="MiseEnQuarantaine">Mise en quarantaine</string>
    <string name="RepriseDemandee">Reprise demandée</string>
    <string name="RepriseEffectuee">Reprise effectuée</string>
    <string name="RetourPUIDemande">Retour PUI demandé</string>
    <string name="RetourFRSDemande">Retour Frs demandé</string>
    <string name="DestructionDemandee">Destruction demandée</string>
    <string name="RetourPUIEffectue">Retour PUI effectué</string>
    <string name="RetourFRSEffectue">Retour Frs effectué</string>
    <string name="DestructionEffectuee">Destruction effectuée</string>
    <string name="PreparationEffectuee">Preparation effectuée</string>
    <string name="statutTraité">Traité</string>
    <string name="statutEncours">Encours</string>
    <string name="statutValide">Validé</string>
    <string name="statutVerrouillée">Verrouillée</string>
    <string name="statutDéverrouillée">Déverrouillée</string>
    <string name="statutDélivrer">Délivrée</string>
    <string name="statutDélivrerEnPartie">Délivrée en partie</string>
    <string name="title_activity_service_controle_retours">ServiceControleRetoursActivity</string>
    <string name="title_activity_service_stock">ServiceStockActivity</string>
    <string name="title_activity_service_zones_et_emplacements">ServiceZonesEtEmplacements</string>
    <string name="title_activity_service_verrou_pharmacie">ServiceVerrouPharmacieActivity</string>
    <string name="title_activity_service_retour_pui">ServiceRetourPUI</string>
    <string name="title_activity_service_retour_fournisseur">ServiceRetourFournisseurActivity
    </string>
    <string name="title_activity_service_destruction">ServiceDestructionActivity</string>
    <string name="notifContent">content</string>
    <string name="aucuneNotification">Aucune Notification trouvé</string>
    <string name="tokenInvalide">Token invalide</string>
    <string name="tokenExpire">Token expiré</string>
    <string name="pubnubSubscribeKey">pubnubSubscribeKey</string>
    <string name="pubnubPublishKey">pubnubPublishKey</string>
    <string name="pubnubCommonChannel">Channel_commun</string>
    <string name="noPhoto">noPhoto</string>
    <string name="photoDejaRenseignee">photoDejaRenseignee</string>
    <string name="title_activity_detail_commande_livraison">DetailCommandeLivraisonActivity</string>
    <string name="title_activity_service_inventaire_scanner">ServiceInventaireScannerActivity</string>
    <string name="Titre_Spinner">Tous</string>
    <string-array name="choix_Spinner">
        <item>Tous</item>
        <item>Classification</item>
        <item>Catégorie</item>
        <item>Fournisseur</item>
    </string-array>
    <string name="scannerContexteProduit">scannerContexteProduit</string>
    <string name="scannerContexteEmplacement">scannerContexteEmplacement</string>
    <string name="scannerContexteFranceMVO">scannerContexteFranceMVO</string>
    <string name="scannerContextePleinVide">scannerContextePleinVide</string>
    <string name="scannerContextePleinVideLocalisation">scannerContextePleinVideLocalisation</string>
    <string name="scannerContextePreparation">scannerContextePreparation</string>
    <string name="scannerContextePreparationADH">scannerContextePreparationADH</string>
    <string name="scannerContexteDocument">scannerContexteDocument</string>
    <string name="scannerContexteAuthentification">scannerContexteAuthentification</string>
    <string name="scannerContexteService">scannerContexteService</string>
    <string name="scannerContexteEmplacementReceptionScannee">scannerContexteEmplacementScannee</string>
    <string name="scannerContexteProduitReceptionScannee">scannerContexteProduitReceptionScannee</string>
    <string name="scannerContextePreparationADHScanProduit">scannerContextePreparationADHScanProdui</string>
    <string name="scannerContexteReceptionPAD">scannerContexteReceptionPAD</string>
    <string name="scannerContexteControleDesRetours">scannerContexteControleDesRetours</string>
    <string name="scannerContexteZoneEtEmplacement">scannerContexteZoneEtEmplacement</string>
    <string name="scannerContextPreparationSimple">scannerContextPreparationSimple</string>
    <string name="scannerContextPreparationMultiple">scannerContextPreparationMultiple</string>
    <string name="scannerContextNewReceptionPUI">scannerContextNewReceptionPUI</string>
    <string name="scannerContextUniqueNewReceptionPUI">scannerContextUniqueNewReceptionPUI</string>
    <string name="scannerContextNewReceptionPAD">scannerContextNewReceptionPAD</string>
    <string name="scannerContextUniqueNewReceptionPAD">scannerContextUniqueNewReceptionPAD</string>
    <string name="scannerContextUniqueNewControleRetour">scannerContextUniqueNewControleRetour</string>
    <string name="scannerContextMultipleNewControleRetour">scannerContextMultipleNewControleRetour</string>
    <string name="priseDePhotoContexteProduit">priseDePhotoContexteProduit</string>
    <string name="priseDePhotoContexteBonDeLivraison">priseDePhotoContexteBonDeLivraison</string>
    <string name="verrouPharmacieTitre">Préparations Vérouillées</string>
    <string name="verrouPharmacieInterneTitre">Délivrances</string>
    <string name="verrouPharmacieNombreTotalDeColis">Nombre total de colis :</string>
    <string name="verrouPharmacieDemandee">Demandée</string>
    <string name="verrouPharmaciePreparee">Vérouillée</string>
    <string name="quarantaineTitire">Mises en quarantaine à contrôler</string>
    <string name="Quarantaine">Quarantaine</string>
    <string name="Destruction">Destruction</string>
    <string name="RetourPUI">Retour PUI</string>
    <string name="RetourFrs">Retour Frs</string>
    <string name="retourMotif">Motif : </string>
    <string name="aucunRetour">"Aucun PH_Retour trouvé"</string>
    <string name="parametreServeurIntroduction">Afin d\'initialiser l\'application, veuillez compléter les champs ci-dessous pour permettre la connexion à la base de données.</string>
    <string name="parametreIpServeur">IP Serveur</string>
    <string name="parametreNumeroPort">Numéro de port</string>
    <string name="parametreNumeroVersionApi">Numéro de version de l\'API</string>
    <string name="medicamentAuLivretTitre">Médicaments au livret</string>
    <string name="dispositifAuLivretTitre">Dispositifs au livret</string>
    <string name="produitForme">Forme</string>
    <string name="produitContenant">Contenant</string>
    <string name="produitMateriaux">Matériaux</string>
    <string name="produitStatut">Statut</string>
    <string name="produitSecteur">Secteur</string>
    <string name="produitPUI">PUI : </string>
    <string name="produitTemperatureDeConservation">Température de conservation</string>
    <string name="produitCelsius">°C</string>
    <string name="produitRegleDeConservation">Règles de conservation</string>
    <string name="produitInformationImportante">Informations importantes</string>
    <string name="produitConditionsDUtilisation">Conditions d\'utilisation</string>
    <string name="produitSterilisation">Sterilisation</string>
    <string name="produitCategorie">Catégorie</string>
    <string name="produitFournisseur">Fournisseur</string>
    <string name="produitPUTTC">Prix Unitaire (TTC) :</string>
    <string name="produitMedicamentARisque">Médicament à risque</string>
    <string name="produitContreIndications">Contre-indications</string>
    <string name="produitEffetsIndesirables">Effets indésirables</string>
    <string name="produitMedicamentDeLaDotationDUrgence">Médicament de la dotation d\'URGENCE</string>
    <string name="produitPosologie">Posologie</string>
    <string name="produitVoie">Voie</string>
    <string name="produitIndicationTherapeutique">Indication thérapeutique</string>
    <string name="produitUI">UI</string>
    <string name="produitCoutDuTraitementJournalier">Coût du traitement journalier :</string>
    <string name="stockTitre">Stocks</string>
    <string name="stockTheorique">Stock Total : </string>
    <string name="notificationTitre">Non lu</string>
    <string name="notificationIndicateur">Indicateur lu, non lu</string>
    <string name="notificationEnvoyerTitre">Nouvelle notification</string>
    <string name="notificationDestinataire">À</string>
    <string name="notificationObjet">Objet</string>
    <string name="notificationMessage">Rédigez votre message</string>
    <string name="tester">Tester</string>
    <string name="valider">Valider</string>
    <string name="minimum">min</string>
    <string name="commentaire">Commentaire</string>
    <string name="separateur">Séparateur</string>
    <string name="precedent">Précédent</string>
    <string name="suivant">Suivant</string>
    <string name="fragile"> FRAGILE</string>
    <string name="aLAbriDeLaLumiere"> À l\'abri de la lumière</string>
    <string name="auSec"> Au sec</string>
    <string name="usageUnique">Usage unique </string>
    <string name="nePasResteriliser">Ne pas restériliser</string>
    <string name="temperature">Température</string>
    <string name="sterilisation">Stérilisation</string>
    <string name="risquesubstancepresancelatex">Présence de Latex  </string>
    <string name="risquesubstancepresancepht">Présence de Phtalates (PHT) </string>
    <string name="risquesubstancepresance">Présence d\'autres subtstances à risque</string>
</resources>