<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="fr.alcyons.phimr4.Notifications.ServiceNotificationsActivity">

    <LinearLayout
        android:id="@+id/barreDeTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bleu_fonce_alcyons"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationEnvoyerTitre"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/barreDeTitre"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/gestionDestinataire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="0.25"
                    android:text="@string/notificationDestinataire"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerDestinataire"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.75" />

            </LinearLayout>

            <ImageView
                android:id="@+id/separateur"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_blue_light"
                android:contentDescription="@string/separateur" />

            <EditText
                android:id="@+id/titreNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@android:color/transparent"
                android:hint="@string/notificationObjet"
                android:paddingTop="10dp"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/separateur1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_blue_light"
                android:contentDescription="@string/separateur" />

            <EditText
                android:id="@+id/messageNotification"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/notificationMessage"
                android:paddingTop="10dp"
                android:textColor="#000000" />

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>
