<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/zoneTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bleu_fonce_alcyons"
        android:padding="10dp">

        <ImageView
            android:id="@+id/boutonFlecheGauche"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_arrowleft"
            android:contentDescription="@string/precedent"
            android:clickable="true" />

        <TextView
            android:id="@+id/nomDispositifTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/boutonFlecheDroite"
            android:layout_toLeftOf="@+id/boutonFlecheDroite"
            android:layout_toRightOf="@id/boutonFlecheGauche"
            android:layout_toEndOf="@id/boutonFlecheGauche"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/boutonFlecheDroite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_arrowright"
            android:contentDescription="@string/suivant"
            android:clickable="true" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/zoneTitre">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/zoneForme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/produitForme"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="25dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:contentDescription="@string/separateur"
                    android:background="@android:color/holo_blue_light" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/zoneContenant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/produitContenant"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contenant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="25dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:contentDescription="@string/separateur"
                    android:background="@android:color/holo_blue_light" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/zoneMateriaux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/produitMateriaux"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/materiaux"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="25dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:contentDescription="@string/separateur"
                    android:background="@android:color/holo_blue_light" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/zoneStatut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/produitStatut"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/statut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="25dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:contentDescription="@string/separateur"
                    android:background="@android:color/holo_blue_light" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/zoneSecteur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/produitSecteur"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/secteur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="25dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:contentDescription="@string/separateur"
                    android:background="@android:color/holo_blue_light" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/zoneCommentaire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commentaire"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/commentaire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="25dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:contentDescription="@string/separateur"
                    android:background="@android:color/holo_blue_light" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>